<resources>
    <string name="app_name">FuzzyContApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="again_password">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="logout">Выход</string>
    <string name="code">Код подтверждения</string>
    <string name="ok">ОК</string>
    <string name="rules">Правила</string>
    <string name="email">E-mail</string>
    <string name="theory">Теория</string>
    <string name="read">Читать</string>
    <string name="categories">Категории</string>
    <string name="home">Дом</string>
    <string name="my_rules">Мои правила</string>
    <string name="profile">Профиль</string>
    <string-array name="names">
        <item>Акселерометр</item>
        <item>Оптимизация</item>
        <item>Физ. модель</item>
        <item>Мат. модель</item>
    </string-array>
    <string name="slogan">Про нечеткую логику на примере\nмаятника Максвелла</string>
    <string name="saved_rules">Сохраненные правила</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="enter_login">Введите ваш логин</string>
    <string name="not_found">Пользователь не найден</string>
    <string name="save">Сохранить</string>
    <string name="settings">Настройки</string>
    <string name="sensitivity">Чувствительность</string>
    <string name="mass">Масса</string>
    <string name="bottom_border">Нижняя граница</string>
    <string name="top_border">Верхняя граница</string>
    <string name="save_to_camera_roll">Сохранить в галерею</string>
    <string name="saved">Оптимизация началась…</string>
    <string name="optimization">Оптимизация</string>
    <string name="accelerometer">Акселерометер</string>
    <string name="maths_model">Математическая модель</string>
    <string name="physics_model">Физическая модель</string>
    <string name="charts_saved">Графики сохранены!</string>
    <string name="start">Старт</string>
    <string name="up">ВВЕРХ</string>
    <string name="down">ВНИЗ</string>
    <string name="stop">СТОП</string>
    <string name="basin_hopping">Basin Hopping</string>
    <string name="genetic_algorithm">Genetic Algorithm</string>
    <string name="x1">Верхняя граница</string>
    <string name="x2">Нижняя граница</string>
    <string name="individuals">Особи</string>
    <string name="generations">Поколения</string>
    <string name="title">Название</string>
    <string name="support">Поддержка</string>
    <string name="support_text">Приветствую тебя, пользователь!

Нечеткая логика является очень большой и сложной темой. В данном приложении собраны только необходимые разделы для понимания нечеткого управления.

Возможно, тебе не хватит представленного материала для полного понимания темы. Если возникнут какие-то вопросы, то можешь обратиться за помощью к разработчику 💜❤️
</string>
    <string name="question">Твой вопрос</string>
    <string name="send">Отправить</string>
    <string name="send_question_ok">Письмо отправлено!</string>
</resources>