<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.BasinHopping">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/lav1"
            android:padding="20dp">
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/title"
                android:layout_gravity="center"
                android:hint="@string/title"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:background="@drawable/edit"
                android:drawablePadding="8dp"
                android:inputType="textPersonName"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/topBorder"
                android:layout_gravity="center"
                android:hint="@string/x1"
                android:layout_marginTop="24dp"
                android:padding="8dp"
                android:background="@drawable/edit"
                android:drawablePadding="8dp"
                android:inputType="textPersonName"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/bottomBorder"
                android:layout_gravity="center"
                android:hint="@string/x2"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:background="@drawable/edit"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/indiv"
                android:layout_gravity="center"
                android:hint="@string/individuals"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:background="@drawable/edit"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/gener"
                android:layout_gravity="center"
                android:hint="@string/generations"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:background="@drawable/edit"/>

            <Button
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/start"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:id="@+id/optim"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/lav1"
                app:cornerRadius="30dp"/>



        </LinearLayout>
    </LinearLayout>
</LinearLayout>

