<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_gravity="center"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/email"
                android:layout_gravity="center"
                android:hint="@string/e_mail"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/email_img"
                android:padding="8dp"
                android:background="@drawable/edit"
                android:drawablePadding="8dp"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/password"
                android:layout_gravity="center"
                android:hint="@string/password"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/lock_img"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:background="@drawable/edit"/>
            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:id="@+id/again_password"
                android:layout_gravity="center"
                android:hint="@string/again_password"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/lock_img"
                android:padding="8dp"
                android:drawablePadding="8dp"
                android:background="@drawable/edit"/>
            <Button
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:text="@string/signup"
                android:backgroundTint="@color/lav1"
                android:layout_gravity="center"
                android:id="@+id/login_button"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="30dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>

